# password

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: config.py
backend/app/api/v1/: __init__.py  deps.py  passwords.py  services.py  users.py
backend/app/crud/: __init__.py  base.py  create.py  delete.py  read.py  update.py
backend/app/database/: db_helper.py
backend/app/models/: __init__.py  base.py  password.py  service.py  user.py
backend/app/schemas/: __init__.py  password.py  service.py  user.py
backend/app/utils/: jwt.py  security.py
frontend/: Dockerfile  package-lock.json
