[tool.poetry]
name = "odin-password"
version = "0.1.0"
description = ""
authors = ["dobrodelete <kirkon3004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
alembic = "^1.13.1"
bcrypt = "^4.1.3"
python-jose = "^3.3.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
