[tool.poetry]
name = "odin-password"
version = "0.1.0"
description = ""
authors = ["dobrodelete"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
pydantic = "^2.7.1"
alembic = "^1.13.1"
bcrypt = "^4.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
cryptography = "^42.0.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
